--- a/src/style/_navbar.scss
+++ b/src/style/_navbar.scss
@@ -9,17 +9,11 @@
   transition: box-shadow 0.2s linear;
 }
 
-#navbar {
-  padding-left: 0;
-  padding-right: 0;
-  font-size: 24px;
-}
-
 .wedding-language-flag {
   max-height: 15px;
   padding-bottom: 3px;
 }
 
-.wedding-navbar-dropdown {
+.wedding-navigate {
   font-size: 24px;
 }
